--- a/index.html
+++ b/index.html
@@ -103,15 +103,11 @@
             <li>
                 <a href="https://www.facebook.com/dylan.herbig/"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
-
             <li>
-                <a href="#"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://www.instagram.com/dylan_herbig/"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="#"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
-            </li>
-            <li>
-                <a href="#"><i class="im im-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
+                <a href="https://github.com/dylanherbig"><i class="im im-github" aria-hidden="true"></i><span>GitHub</span></a>
             </li>
         </ul> 
         <!-- end home-social -->
@@ -814,17 +810,17 @@
                 </div>
 
                 <ul class="footer-social">
-                    <li><a href="#0">
+                    <li><a href="https://www.facebook.com/dylan.herbig/">
                         <i class="im im-facebook" aria-hidden="true"></i>
                         <span>Facebook</span>
                     </a></li>
 
-                    <li><a href="#0">
+                    <li><a href="https://www.instagram.com/dylan_herbig/">
                         <i class="im im-instagram" aria-hidden="true"></i>
                         <span>Instagram</span>
                     </a></li>
-                    <li><a href="#0">
-                        <i class="im im-behance" aria-hidden="true"></i>
+                    <li><a href="https://github.com/dylanherbig">
+                        <i class="im im-github" aria-hidden="true"></i>
                         <span>GitHub</span>
                     </a></li>
                 </ul>
