--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="https://s3.amazonaws.com/handshake.production/documents/documents/023/085/896/original/Dylan_Herbig_CV.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAILGI2B7PIOQKG5EA%2F20210517%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210517T235230Z&X-Amz-Expires=10&X-Amz-SignedHeaders=host&X-Amz-Signature=a2d9004948edb78e117d9232334e8ba1117e236e213a8998a907a1fbf336dace" download="Dylan_Herbig_CV" class="btn btn--primary full-width">Download My CV</a>
+                <a href="Dylan_Herbig_CV.pdf" download="Dylan_Herbig_CV" class="btn btn--primary full-width">Download My CV</a>
             </div>
             <div class="col-six tab-full right">
                 <a href="#contact" title="contact" class="btn full-width smoothscroll">Contact me now!</a>
