Update index.html --- added reference letters

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Dylan Herbig</title>
+    <title>Dylan Herbig Website</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -175,7 +175,7 @@
         <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="Dylan_Herbig_CV.pdf" download="Dylan_Herbig_CV" class="btn btn--primary full-width">Download My CV</a>
+                <a href="Dylan_Herbig_CV.pdf" download="resources/Dylan_Herbig_CV" class="btn btn--primary full-width">Download My CV</a>
             </div>
             <div class="col-six tab-full right">
                 <a href="#contact" title="contact" class="btn full-width smoothscroll">Contact me now!</a>
@@ -268,6 +268,17 @@
             </div> <!-- end right -->
 
         </div> <!-- end about-content timeline -->
+        
+                <div class="row about-content about-content--buttons">
+
+            <div class="col-six tab-full left">
+                <a href="Dylan_Herbig_CV.pdf" download="resources/edataconsulting_reference_letter" class="btn btn--primary full-width">edataconsulting Reference Letter</a>
+            </div>
+            <div class="col-six tab-full right">
+                <a href="#contact" title="contact" download="resources/HeidelbergiT_reference_letter" class="btn full-width smoothscroll">Heidelberg iT Reference Letter</a>
+            </div>
+
+        </div> <!-- end about-content buttons -->
 
     </section> <!-- end about -->
     
