reformatting reference buttons

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="Dylan_Herbig_CV.pdf" download="resources/Dylan_Herbig_CV" class="btn btn--primary full-width">Download My CV</a>
+                <a href="resources/Dylan_Herbig_CV.pdf" download="Dylan_Herbig_CV" class="btn btn--primary full-width">Download My CV</a>
             </div>
             <div class="col-six tab-full right">
                 <a href="#contact" title="contact" class="btn full-width smoothscroll">Contact me now!</a>
@@ -272,10 +272,10 @@
                 <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="Dylan_Herbig_CV.pdf" download="resources/edataconsulting_reference_letter" class="btn btn--primary full-width">edataconsulting Reference Letter</a>
+                <a href="resources/edataconsulting_reference_letter.pdf" download="edataconsulting_reference_letter" class="btn btn--primary full-width">edataconsulting Reference Letter</a>
             </div>
             <div class="col-six tab-full right">
-                <a href="#contact" title="contact" download="resources/HeidelbergiT_reference_letter" class="btn full-width smoothscroll">Heidelberg iT Reference Letter</a>
+                <a href="resources/HeidelbergiT_reference_letter" download="HeidelbergiT_reference_letter" class="btn full-width btn--primary">Heidelberg iT Reference Letter</a>
             </div>
 
         </div> <!-- end about-content buttons -->
