--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
 
         </div> <!-- end about-content timeline -->
         
-                <div class="row about-content about-content--buttons">
+                <div class="row about-content about-content--buttons" style="margin-top: 3.6em;">
 
             <div class="col-six tab-full left">
                 <a href="resources/edataconsulting_reference_letter.pdf" download="edataconsulting_reference_letter" class="btn btn--primary full-width">edataconsulting Reference Letter</a>
             </div>
             <div class="col-six tab-full right">
-                <a href="resources/HeidelbergiT_reference_letter" download="HeidelbergiT_reference_letter" class="btn full-width btn--primary">Heidelberg iT Reference Letter</a>
+                <a href="resources/HeidelbergiT_reference_letter.pdf" download="HeidelbergiT_reference_letter" class="btn full-width btn--primary">Heidelberg iT Reference Letter</a>
             </div>
 
         </div> <!-- end about-content buttons -->
