Updated "Projects" sub-description

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <h3>Portfolio</h3>
                 <h1>See My Latest Projects.</h1>
                 
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <p class="lead">While I am not completing a programming assignment, participating in various clubs, or preparing for undergraduate research, I work as a Web Designer and create Wordpress websites for companies and clubs. Feel free to look at my current and past projects!</p>
             </div>
         </div>
 
