Update contact information

--- a/index.html
+++ b/index.html
@@ -789,9 +789,7 @@
             </div>
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
-                <p>Phone: (+63) 555 1212<br>
-                Mobile: (+63) 555 0100<br>
-                Fax: (+63) 555 0101
+                <p>Mobile: +1 (703) 936 1012<br>
                 </p>
 
                 <h4 class="h06">Email</h4>
@@ -801,9 +799,9 @@
 
                 <h4 class="h06">Address</h4>
                 <p>
-                1600 Amphitheatre Parkway<br>
-                Mountain View, CA<br>
-                94043 US
+                400 Monroe Ln.<br>
+                Charlottesville, VA<br>
+                22903 US
                 </p>
             </div>
 
