--- a/index.html
+++ b/index.html
@@ -296,6 +296,15 @@
             </div>
         </div>
 
+        <div class="portfolio-works">
+            <div class="portfolio-brick">
+                <div class="item-portfolio">
+
+
+                </div>
+            </div>
+        </div>
+
         <div class="row masonry-wrap">
             <div class="masonry">
 
@@ -572,18 +581,20 @@
 
                 <div class="testimonials__slide">
                     <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Qui ipsam temporibus quisquam velMaiores eos cumque distinctio nam accusantium ipsum. 
-                    Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori.</p>
+                    <p>Dylan delivers solid, creative designs that meet the objectives as specified in the creative brief. He created our e-commerce website that drives our sales and
+                        continues to improve website traffic through add campaigns and debugging issues.
+                    </p>
                     <div class="testimonials__author h06">
-                        Nick Herbig
+                        Marco Zheng
                         <span>Project Manager, Osvirol</span>
                     </div>
                 </div>
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-05.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                    Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel.</p>
+                    <img src="images/avatars/1616067315913.jpg" alt="Author image" class="testimonials__avatar">
+                    <p>In each stage of his internship, Dylan consistently acquired good specialist knowledge in a very short time and was always able to incorporate 
+                        and implement it successfully in his daily work. His ability to familiarise himself was excellent; therefore, he always grasped even complex training content very quickly.
+                    </p>
                     <div class="testimonials__author h06">
                         Stephan Lochner
                         <span>CEO, edataconsulting</span>
@@ -591,12 +602,13 @@
                 </div>
 
                 <div class="testimonials__slide">
-                    <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
-                    <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.  
-                    Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.</p>
+                    <img src="images/avatars/1569539771488.jpg" alt="Author image" class="testimonials__avatar">
+                    <p>Dylan is an extraordinarily fast and thorough website designer who created our information site using Wordpress. Not only did he exceed our
+                        expectations, he also impresses us with his continuous creativity and eagerness to improve.
+                    </p>
                     <div class="testimonials__author h06">
-                        Satya Nadella
-                        <span>CEO, Microsoft</span>
+                        Jeannet Kiessling
+                        <span>Co-President, Heidelberg Palo Alto Club</span>
                     </div>
                 </div>
                 
@@ -615,9 +627,11 @@
             <div class="col-full">
                 <h3>Relevant Coursework</h3>
                 <h1>Latest From University.</h1>
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute. 
-                Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum 
-                ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <p class="lead">I always strive to take rigorous courses 
+                    to improve my current skill-set and to learn more about 
+                    the yet un-explored technical world. I believe that these courses below
+                    have helped me on my journey.
+                </p>
             </div>
         </div>
 
