--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 
         <ul class="home-social">
             <li>
+                <a href="https://www.linkedin.com/in/dylan-herbig-4113721a3/"><i class="im im-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
+            </li>
+            <li>
                 <a href="https://www.facebook.com/dylan.herbig/"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
@@ -763,7 +766,7 @@
                 <h3>Contact</h3>
                 <h1>Say Hello.</h1>
                 
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <p class="lead">I always welcome new opportunities. If you are interested in my work and would like to connect with me, please feel free to use the contact form below to write me a message or connect with me on LinkedIn!</p>
             </div>
         </div>
 
@@ -844,6 +847,10 @@
                 </div>
 
                 <ul class="footer-social">
+                    <li><a href="https://www.linkedin.com/in/dylan-herbig-4113721a3/">
+                        <i class="im im-linkedin" aria-hidden="true"></i>
+                        <span>LinkedIn</span>
+                    </a></li>
                     <li><a href="https://www.facebook.com/dylan.herbig/">
                         <i class="im im-facebook" aria-hidden="true"></i>
                         <span>Facebook</span>
