--- a/index.html
+++ b/index.html
@@ -302,12 +302,30 @@
         <div class="portfolio-works">
             <div class="portfolio-brick">
                 <div class="item-portfolio">
+                    
+                    <div class="portfolio-section" style="margin-top: 100px; margin-bottom: 100px;">
+                        <iframe src="https://hd-pa.com/" width="1100px" height="500" frameborder="0"
+                          allowfullscreen sandbox>>
+                        </iframe>
+                      </div>
 
+                    <div class="portfolio-section" style="margin-top: 100px; margin-bottom: 100px;">
+                        <iframe src="https://www.osvirol.com/" width="1100px" height="500" frameborder="0"
+                          allowfullscreen sandbox>>
+                        </iframe>
+                    </div>    
+
+                    <div class="portfolio-section" style="margin-top: 100px; margin-bottom: 100px;">
+                        <iframe src="https://www.expertresults.co/" width="1100px" height="500" frameborder="0"
+                          allowfullscreen sandbox>>
+                        </iframe>
+                    </div>
 
                 </div>
             </div>
         </div>
 
+        <!------
         <div class="row masonry-wrap">
             <div class="masonry">
 
@@ -339,8 +357,8 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </div>
 
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
+                    </div> end item-folio 
+                </div>  end masonry__brick
 
                 <div class="masonry__brick">
                     <div class="item-folio">
@@ -370,8 +388,8 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </div>
 
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
+                    </div>  end item-folio
+                </div>  end masonry__brick
 
                 <div class="masonry__brick">
                     <div class="item-folio">
@@ -401,8 +419,8 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
+                    </div>  end item-folio 
+                </div>  end masonry__brick 
 
                 <div class="masonry__brick">
                     <div class="item-folio">
@@ -432,8 +450,8 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
+                    </div>  end item-folio 
+                </div>  end masonry__brick 
 
                 <div class="masonry__brick">
                     <div class="item-folio">
@@ -463,8 +481,8 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
+                    </div>  end item-folio 
+                </div>  end masonry__brick 
 
                 <div class="masonry__brick">
                     <div class="item-folio">
@@ -494,8 +512,8 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
+                    </div> end item-folio 
+                </div>  end masonry__brick 
 
                 <div class="masonry__brick">
                     <div class="item-folio">
@@ -525,8 +543,8 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
+                    </div>  end item-folio 
+                </div> < end masonry__brick 
 
                 <div class="masonry__brick">
                     <div class="item-folio">
@@ -556,10 +574,11 @@
                             <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
-                    </div> <!-- end item-folio -->
+                    </div>  end item-folio -->
                 </div> <!-- end masonry__brick -->
 
             </div>
+            
         </div> <!-- end masonry -->
 
     </section> <!-- end works -->
